--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://kit.fontawesome.com/602ea35771.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./stylegrid.css"
+    <link rel="stylesheet" href="./assets/styles/style.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
