--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://kit.fontawesome.com/602ea35771.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/styles/style.css"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgriPlus</title>
-</head>
-<body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="./assets/styles/style.css">
+        <title></title>
+    </head>
+    <body>
+    <header>
+    </header>
+    <div class="top-container">
+        <div id="homeicon">AgriPlus</div>
+        <div id="home">Home</div>
+        <div id="about">About</div>
+        <div id="products">Products</div>
+        <div id="contacts">Contact Us</div>
+        <div id="login">Login</div>
+        <div id="start">Get Started</div>
+    </div>
 
-    <h1>Nothing to see here... Yet.</h1>
-</body>
+    </div>
+    </body>
 </html>
