added background info div

--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
     </header>
     <div class="top-container">
         <div id="homeicon">AgriPlus</div>
+        <div id="login">Login</div>
+        <div id="start">Get Started</div>
+    <div class="homelinks">
         <div id="home">Home</div>
         <div id="about">About</div>
         <div id="products">Products</div>
-        <div id="contacts">Contact Us</div>
-        <div id="login">Login</div>
-        <div id="start">Get Started</div>
+        <div id="contacts">Contacts</div>
     </div>
 
+    <div class="background">
+        <h>Buying and selling quality farm produce has never been easier.</h>
+        <span></span>
+        <h>AgriPlus is here to have you sorted, you can order farm produce from the farmers, harvesters, and producers directly.</h>
+        <h>Explore More</h>
+    </div>
     </div>
     </body>
 </html>
