--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     </div>
 
     <div class="background">
-        <h>Buying and selling quality farm produce has never been easier.</h>
-        <span></span>
-        <h>AgriPlus is here to have you sorted, you can order farm produce from the farmers, harvesters, and producers directly.</h>
-        <h>Explore More</h>
+        <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
+        <h2>AgriPlus is here to have you sorted, you can order farm <br>produce from the farmers, harvesters, and producers</br> directly.</h2>
+        <h3>Explore More</h3>
     </div>
     </div>
     </body>
