--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
     <header>
     </header>
-    <div class="top-container">
+    <div class="top_container">
         <div id="homeicon">AgriPlus</div>
         <div id="login">Login</div>
         <div id="start">Get Started</div>
@@ -26,10 +26,27 @@
         <div id="contacts">Contacts</div>
     </div>
 
-    <div class="background">
+    <div id="background_container">
         <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
         <h2>AgriPlus is here to have you sorted, you can order farm <br>produce from the farmers, harvesters, and producers</br> directly.</h2>
         <h3>Explore More</h3>
+    </div>
+
+    <div class="customers">
+        <div>200+
+            <em></em>
+            Verified Vendors
+        </div>
+        <div>
+           105+
+           <em></em>
+           Happy Customers 
+        </div>
+        <div>
+            2000+
+            <em></em>
+            Nation Wide Customers
+        </div>
     </div>
     </div>
     </body>
