insert tables "customers"

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <h3>Explore More</h3>
     </div>
 
-    <div class="customers">
-        <div>200+
-            <em></em>
-            Verified Vendors
+    <!-- <div class="customers">
+        <div><span>200+</span>Verified Vendors
         </div>
         <div>
-           105+
-           <em></em>
-           Happy Customers 
+           <span>105+</span>Happy Customers
         </div>
         <div>
-            2000+
-            <em></em>
-            Nation Wide Customers
-        </div>
+            <span>2000+</span>Nation Wide Customers
+        </div> -->
+
+    <!-- <table>
+        <tr><span>200+</span>Verified Vendors</tr>
+        <td><span>105+</span>Happy Customers</tr>
+        <tr><span>2000+</span>Nation Wide Customers</tr>
+    </table> -->
     </div>
     </div>
     </body>
