--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div id="contacts">Contacts</div>
     </div>
 
-    <div id="background_container">
+    <div class="background_container">
         <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
         <h2>AgriPlus is here to have you sorted, you can order farm <br>produce from the farmers, harvesters, and producers</br> directly.</h2>
         <h3>Explore More</h3>
     </div>
 
-    <!-- <div class="customers">
+    <div class="customers">
         <div><span>200+</span>Verified Vendors
         </div>
         <div>
@@ -40,7 +40,7 @@
         </div>
         <div>
             <span>2000+</span>Nation Wide Customers
-        </div> -->
+        </div>
 
     <!-- <table>
         <tr><span>200+</span>Verified Vendors</tr>
