--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <span>2000+</span>Nation Wide Customers
         </div>
 
+    <div>
+        <h> test</h>
+    </div>
+
     <!-- <table>
         <tr><span>200+</span>Verified Vendors</tr>
         <td><span>105+</span>Happy Customers</tr>
