--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
     <header>
     </header>
+<main>
     <div class="top_container">
         <div id="homeicon">AgriPlus</div>
         <div id="login">Login</div>
@@ -41,9 +42,13 @@
         <div>
             <span>2000+</span>Nation Wide Customers
         </div>
-
-    <div>
-        <h> test</h>
+  
+        <em>
+        <div class="why">
+        <h>Why we exist</h><img id="img3" src="./assets/images/image 3.png" alt="" srcset="">
+        <p>We are built to make your work easier. Like any online<br>ecommerce, AgriPlus provide a great platform for</br><br>farmers
+        to reach the customers throughout the country. We have made it easier to shop from</br> anywhere through the platform</br></p>
+        </em>
     </div>
 
     <!-- <table>
@@ -53,5 +58,6 @@
     </table> -->
     </div>
     </div>
+</main>
     </body>
 </html>
