create new style file: index.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="./assets/styles/style.css">
+        <link rel="stylesheet" href="./assets/styles/index.css">
         <title></title>
     </head>
     <body>
@@ -17,14 +17,13 @@
     </header>
 <main>
     <div class="top_container">
-        <div id="homeicon">AgriPlus</div>
-        <div id="login">Login</div>
-        <div id="start">Get Started</div>
-    <div class="homelinks">
-        <div id="home">Home</div>
+        <div id="homeicon">AgriPlus</div><div id="home">Home</div>
         <div id="about">About</div>
         <div id="products">Products</div>
-        <div id="contacts">Contacts</div>
+        <div id="contacts">Contacts Us</div>
+        <div id="login">Login</div>
+        <div id="start">Get Started</div> 
+         
     </div>
 
     <div class="background_container">
