--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
     </header>
 <main>
     <div class="top_container">
-        <div id="homeicon">AgriPlus</div><div id="home">Home</div>
-        <div id="about">About</div>
-        <div id="products">Products</div>
-        <div id="contacts">Contacts Us</div>
-        <div id="login">Login</div>
-        <div id="start">Get Started</div> 
+        <div class="flexbox-item">AgriPlus</div>
+        <div class="flexbox-item">Home</div>
+        <div class="flexbox-item">About</div>
+        <div class="flexbox-item">Products</div>
+        <div class="flexbox-item">Contacts Us</div>
+        <div class="flexbox-item">Login</div>
+        <div class="flexbox-item">Get Started</div> 
          
     </div>
 
-    <div class="background_container">
+    <div class="flexbox-item">
         <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
         <h2>AgriPlus is here to have you sorted, you can order farm <br>produce from the farmers, harvesters, and producers</br> directly.</h2>
         <h3>Explore More</h3>
     </div>
 
-    <div class="customers">
+    <div class="flexbox-item">
         <div><span>200+</span>Verified Vendors
         </div>
         <div>
@@ -43,7 +44,7 @@
         </div>
   
         <em>
-        <div class="why">
+        <div class="flexbox-item">
         <h>Why we exist</h><img id="img3" src="./assets/images/image 3.png" alt="" srcset="">
         <p>We are built to make your work easier. Like any online<br>ecommerce, AgriPlus provide a great platform for</br><br>farmers
         to reach the customers throughout the country. We have made it easier to shop from</br> anywhere through the platform</br></p>
