--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     </head>
     <body>
     <header>
+        <div class="flexbox-item agri">AgriPlus</div>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+        <a class="login" href="button">Login</button></a>
+        <a class="login" href="button">Get Started</button></a>
     </header>
 <main>
-    <div class="top_container">
-        <div class="flexbox-item">AgriPlus</div>
-        <div class="flexbox-item">Home</div>
-        <div class="flexbox-item">About</div>
-        <div class="flexbox-item">Products</div>
-        <div class="flexbox-item">Contacts Us</div>
-        <div class="flexbox-item">Login</div>
-        <div class="flexbox-item">Get Started</div> 
-         
-    </div>
 
     <div class="flexbox-item">
         <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
