added new section: section 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
     <header>
-        <div class="flexbox-item agri">AgriPlus</div>
+        <div class="logo">AgriPlus</div>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <a class="login" href="button">Login</button></a>
-        <a class="login" href="button">Get Started</button></a>
+        <a class="start" href="button">Get Started</button></a>
     </header>
 <main>
 
@@ -49,7 +49,6 @@
         <h>Why we exist</h><img id="img3" src="./assets/images/image 3.png" alt="" srcset="">
         <p>We are built to make your work easier. Like any online<br>ecommerce, AgriPlus provide a great platform for</br><br>farmers
         to reach the customers throughout the country. We have made it easier to shop from</br> anywhere through the platform</br></p>
-        </em>
     </div>
 
     <!-- <table>
