--- a/index.html
+++ b/index.html
@@ -28,27 +28,33 @@
     </header>
 <main>
 
-    <div class="flexbox-item">
+    <div class="flexbox-item section1">
         <h1>Buying and selling quality <br>farm produce has never </br>been easier.</h1>
         <h2>AgriPlus is here to have you sorted, you can order farm <br>produce from the farmers, harvesters, and producers</br> directly.</h2>
         <h3>Explore More</h3>
     </div>
 
-    <div class="flexbox-item">
-        <div><span>200+</span>Verified Vendors
+    <div class="flexbox-item customers">
+        <!-- <li><a href="#"><span>200+</span>Verified Vendors</a></li>
+        <li><a href="#"><span>105+</span>Happy Customers</a></li>
+        <li><a href="#"><span>2000+</span>Nation Wide Customers</a></li> -->
+        <div>
+           200+ <span>Verified Vendors</span>
         </div>
         <div>
-           <span>105+</span>Happy Customers
+           105+ <span>Happy Customers</span>
         </div>
         <div>
-            <span>2000+</span>Nation Wide Customers
+            2000+ <span>Nation Wide Customers</span>
         </div>
-  
-        <em>
-        <div class="flexbox-item">
-        <h>Why we exist</h><img id="img3" src="./assets/images/image 3.png" alt="" srcset="">
-        <p>We are built to make your work easier. Like any online<br>ecommerce, AgriPlus provide a great platform for</br><br>farmers
-        to reach the customers throughout the country. We have made it easier to shop from</br> anywhere through the platform</br></p>
+    </div>
+
+  <em></em>
+    <div class="flexbox-item why">
+    <h>Why we exist</h>
+    <img id="img3" src="./assets/images/image 3.png" alt="" srcset="">
+    <p>We are built to make your work easier. Like any online<br>ecommerce, AgriPlus provide a great platform for</br><br>farmers
+    to reach the customers throughout the country.<br>We have made it easier to shop from</br> anywhere through the platform</br></p>
     </div>
 
     <!-- <table>
