added categotry styling

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     to reach the customers throughout the country.<br>We have made it easier to shop from</br> anywhere through the platform</br></p>
     </div>
 
+    <div class="categories">
+        <h>Our Categories of Products</h>
+        <em></em>
+        <p>We go beyond the borders to ensure you get fresh produce <span>from the farm. Our customer satisfaction is our mission.</span></p>
+    </div>
+
+    <div class="flexbox-item more-products"
     <!-- <table>
         <tr><span>200+</span>Verified Vendors</tr>
         <td><span>105+</span>Happy Customers</tr>
