added category class(1-3)

--- a/index.html
+++ b/index.html
@@ -63,14 +63,53 @@
         <p>We go beyond the borders to ensure you get fresh produce <span>from the farm. Our customer satisfaction is our mission.</span></p>
     </div>
 
-    <div class="flexbox-item more-products"
-    <!-- <table>
-        <tr><span>200+</span>Verified Vendors</tr>
-        <td><span>105+</span>Happy Customers</tr>
-        <tr><span>2000+</span>Nation Wide Customers</tr>
-    </table> -->
+    <span></span>
+
+    <h>Most Popular</h>
+
+<div class="popular">
+
+    <div>
+        <img id="carrots" src="./assets/images/Rectangle 5.png" alt="" srcset="">
     </div>
+         
     </div>
+    <div>
+        <img id="cereals" src="./assets/images/image 4.png" alt="" srcset="">     
+    </div>
+    <div>
+        <img id="fish" src="./assets/images/image 5.png" alt="" srcset="">
+    </div>
+    <div>  
+        <img id="sukuma" src="./assets/images/image 6.png" alt="" srcset="">
+    </div>
+
+<div class="categories category-1">
+    <h>Fresh Carrots</h>
+    <p>Kinyanjui farmers Association</p>
+    <p>Ksh. 200/Kg</p>
+</div>
+
+<div class="categories category-2">
+    <h>Cereals</h>
+    <p>Kenya Cereals Board</p>
+    <p>Ksh. 5000/bag</p>
+</div>
+
+<div class="categories category-3">
+    <h>Fresh Fish/Tilapia</h>
+    <p>Mr. Otieno</p>
+    <p>Ksh. 500/kg</p>
+</div>
+
+<div class="categories category-3">
+    <h>Kales/Sukuma Wiki</h>
+    <p>Njoki's Farm</p>
+    <p>Ksh. 50/bunch</p>
+</div>
+
+
+    
 </main>
     </body>
 </html>
