added read-more, communications, and footer divs

--- a/index.html
+++ b/index.html
@@ -176,24 +176,67 @@
     </div>
 
 <div class="customer-feedback">
-    <h>What our Esteemed customers has to say about us</h>
+    <h6>What our Esteemed customers has to say about us</h6>
+    <span></span>
         <div #id="Rebecca"></div>
-        <i class="fa-solid fa-star"></i> <span></span><i class="fa-solid fa-star"></i><span></span><i class="fa-solid fa-star"></i><span></span><i class="fa-solid fa-star"></i><span></span><i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
         <p>"The most efficient way to get fresh produce"</p>
+        <span></span>
         <img id="feedback1" src="./assets/images/Rectangle 11.png" alt="" srcset=""> <h>Rebecca Mkulima</h>
-    </div>
 
-    <div #id="John">
+        <div #id="John">
         <i class="fa-solid fa-star"></i>
         <p>"AgriPlus is the place to market your produce"</p>
         <img id="feedback2" src="./assets/images/Rectangle 11-1.png" alt="" srcset=""> <h>John Joe</h>
 
-    <div #id="Lavington">
+        <div #id="Lavington">
         <i class="fa-solid fa-star"></i>
         <p>"Connecting rural to urban through business"</p>
         <img id="feedback3" src="./assets/images/Rectangle 11-2.png" alt="" srcset=""> <h>Lavington dwellers</h>
-    </div>
 </div>
+
+<div id="read-more"
+    <h>Read More</h>
+</div>
+
+<div class="communications">
+    <h>We'd like to keep in touch</h>
+    <p>Subscribe to our newsletter</p>
+    <p>Enter your email address</p>
+    <p>Susbscibe</p>
+</div>
+
+<footer>
+    <div id="agri2">
+    <h>AgriPlus</h>
+    <p>Quality Farm produce through<br> buying and selling</br></p>
+    <h>Get the app</h>
+    </div>
+
+    <div id="company">
+        <h>Company</h>
+        <p>About</p>
+        <p>Product</p>
+        <p>Contact Us</p>
+    </div>
+
+    <div id="prods">
+        <h>Products</h>
+        <p>Dairy</p>
+        <p>Cereals</p>
+        <p>Vegetables & Fruits</p>
+        <p>More...</p>
+    </div>
+
+    <div id="Others">
+        <h>Others</h>
+        <p>FAQs</p>
+        <p>Terms of Services</p>
+        <p>Privacy and Policy</p>
+    </div>
+
+
+</footer>
 
 
     
